添加复习计划，背诵和单词都是计划下面
