# backend/cmd/server/wire_gen.go
@@ -27,14 +27,16 @@ func wireApp(confServer *conf.Server, confData *conf.Data, wechat *conf.Wechat, 
 	studentRepo := data.NewStudentRepo(dataData)
 	studentUsecase := biz.NewStudentUsecase(studentRepo, logger)
 	wordRepo := data.NewWordRepo(dataData)
+	planRepo := data.NewPlanRepo(dataData)
 	llmService := biz.NewLLMService(llm, logger)
-	wordUsecase := biz.NewWordUsecase(wordRepo, studentRepo, llmService, logger)
+	wordUsecase := biz.NewWordUsecase(wordRepo, planRepo, studentRepo, llmService, logger)
 	confusedWordRepo := data.NewConfusedWordRepo(dataData)
-	confusedWordUsecase := biz.NewConfusedWordUsecase(confusedWordRepo, wordRepo, studentRepo, logger)
+	confusedWordUsecase := biz.NewConfusedWordUsecase(confusedWordRepo, wordRepo, planRepo, studentRepo, logger)
+	planUsecase := biz.NewPlanUsecase(planRepo, wordRepo, studentRepo, logger)
 	wechatService := biz.NewWechatService(wechat, logger)
 	ocrService := data.NewUmiOCRClient()
 	pronunciationService := biz.NewPronunciationService(logger)
-	studentService := service.NewStudentService(studentUsecase, wordUsecase, confusedWordUsecase, wechatService, ocrService, pronunciationService, logger)
+	studentService := service.NewStudentService(studentUsecase, wordUsecase, confusedWordUsecase, planUsecase, wechatService, ocrService, pronunciationService, logger)
 	httpServer := server.NewHTTPServer(confServer, studentService, ocrService, logger)
 	app := newApp(logger, httpServer)
 	return app, func() {
